fix bug that caused strange formatting with on-page jumps

--- a/css/customstyles.scss
+++ b/css/customstyles.scss
@@ -149,7 +149,7 @@ h6:target:before {
   content: '';
   display: block;
   height: 155px;
-  margin-top: -100px; }
+  margin-top: -155px; }
 
 .post-content {
   img {
